# gkat

./: README.md  dune-project  gkat.opam  in
lib/: automaton.ml  bisimulation.ml  dune  expr.ml  grammar.mly  graph.ml  intAutomaton.ml  lexer.mll  test.ml  testImpl.ml  transition.ml  union_find.ml
test/: axioms.ml  dune  genexpr.ml  gkat.ml  gkattest.ml  myTest.ml  weakestTest.ml
